# bob-orchestrator

./: .gitignore  FREEZE.md  LICENSE  README.md  demo-hackathon.mjs  index.html  package.json  validate-server.mjs
ada/: SovereignRuntime.ada  ada_gate.mjs  bob_contract.adb  bob_contract.ads
apple-gitdos/: gitdos.js  index.html  manifest.json
ascii/: ascii3d.py  bob_ascii.mjs  img2ascii.py
autonomous/: autonomous_agent.mjs  chat.mjs  compare.mjs  dictionary.mjs  emoji_trigger.mjs  holyc_nil.mjs  tavily_search.mjs
bridge/: demo.mjs
core/: bob.mjs  metatron.mjs  quantum.mjs
granite-serve/: bob-start.mjs  start-windows.bat  start.sh
holyc/: README.md  holy_parser.mjs  holy_runtime.mjs  holy_sandbox_policy.mjs  holy_sim.mjs
holyc/holy_examples/: agent_status.HC  boot.HC  worm_seal.HC
honeybob/: bob_prime.mjs  phi_trap.rs
lean4/: SovereignGate.lean
omega/: index.html
prolog/: sovereign_kernel.pl
resonance/: Cargo.toml  demo.html
resonance/src/: graph.rs  lib.rs  main.rs  nodes.rs  phi.rs  pipeline.rs
super-repo/: MANIFEST.md  index.html  super.css  super.js
super-repo/agents/: DBOIB_META_AGENT.md
super-repo/backend/: app-router.mjs
super-repo/bytecode/: opcodes.json
super-repo/github-apps/: model-backends.json
super-repo/rtl/interfaces/: IFormalGate.sv  ISimEngine.sv
tessera/: studio.css  studio.html  studio.js  studio_server.mjs  tessera_compiler.mjs  tessera_demo.mjs  tessera_parser.mjs
