[package]
name = "resonance"
version = "0.1.0"
edition = "2021"
description = "ResonanceGraph — DAG pipeline with Metatron node injection. FCC-φ-∂-2026."
authors = ["Ahmad Parr <ahmedparr93@gmail.com>"]

[lib]
name = "resonance"
path = "src/lib.rs"

[[bin]]
name = "resonance-demo"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
